--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,5 +10,7 @@
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
 
+    --font-hanken-grotesk: "Hanken Grotesk", "sans-serif";
+
     --color-black: #060606;
 }
