add custom font size

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,5 +12,8 @@
 
     --font-hanken-grotesk: "Hanken Grotesk", "sans-serif";
 
+    /* 10px */
+    --text-2xs: 0.625rem;
+
     --color-black: #060606;
 }
